--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&amp;family=Raleway&amp;family=Shrikhand&amp;display=swap&amp;_cacheOverride=1702719730117" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css?_cacheOverride=1702719730117" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="style.css/main.css">
 </head>
@@ -15,12 +15,13 @@
     <div class="main-container">
         <header>
             <a href="#"><img src="/assets/images/logo/ohmyfood@2x.svg" alt="logo" title="Ohmyfood" id="logo"></a>
+        <nav>
             <form class="search-bar">
                 <i class="fa-solid fa-location-dot" aria-hidden="true"></i>
                 <input type="search" id="ville,pays" placeholder="Paris, Belleville">
             </form>
+        </nav>
         </header>
-        <nav>
             <div class="explorer">
                 <h1 class="section-title">Réservez le menu qui vous convient</h1>
                 <p class="sub-title">Découvrez des restaurants d'exception, selectionnés par nos soins.</p>
@@ -28,43 +29,57 @@
                     <abbr class="glass">Explorer nos restaurants</abbr>
                 </button>
             </div>
-        </nav>
         <main>
         <section class="fonctionnement">
-            <h2>Fonctionnement</h2>
-            <p class="etape1">
-                </p><p class="ellipse">1</p>
+            <h2 class="section-title2">Fonctionnement</h2>
+            <div class="etape">
+                <div class="ellipse">
+                    <p class="numero">1</p>
+                </div>
                 <i class="fa-solid fa-mobile-screen-button" aria-hidden="true"><b class="icone-txt">Choisissez un restaurant</b></i>
-            <p></p>
-            <p class="etape2">
-                </p><p class="ellipse">2</p>
+            </div>
+            <div class="etape">
+                <div class="ellipse">
+                    <p class="numero">2</p>
+                </div>
                 <i class="fa-solid fa-list" aria-hidden="true"><b class="icone-txt">Composez votre menu</b></i>
-            <p></p>
-            <p class="etape3">
-                </p><p class="ellipse">3</p>
+            </div>
+            <div class="etape">
+                <div class="ellipse">
+                    <p class="numero">3</p>
+                </div>
                 <i class="fa-solid fa-store" aria-hidden="true"><b class="icone-txt">Dégustez au restaurant</b></i>
-            <p></p>
+            </div>
         </section>
         <section class="menus">
-            <h2>Restaurants</h2>
+            <h2 class="section-title3">Restaurants</h2>
             <div class="cartes">
                 <a href="#">
                     <article class="carte">
-                        <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat rond">
+                        <div class="image-container">
+                            <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat rond">
+                            <div class="image-txt">Nouveau</div>
+                        </div>
                         <div class="carte-txt">    
-                            <h3 class="card-title">La palette du goût</h3>
-                            <p class="hebergements-card-subtitle">Ménilmontant</p>
-                            <i class="fa-regular fa-heart" aria-hidden="true"></i>
+                            <h3 class="carte-title">La palette du goût</h3>
+                            <p class="carte-subtitle">Ménilmontant</p>                            
+                            <i class="fa fa-heart fa-2x" aria-hidden="true"></i>
+                                                       
                         </div>
                     </article>
                 </a>
                 <a href="#">
                     <article class="carte">
-                        <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat rond">
+                        <div class="image-container">
+                            <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat rond">
+                            <div class="image-txt">Nouveau</div>
+                        </div>
                         <div class="carte-txt">    
-                            <h3 class="card-title">La note enchantée</h3>
-                            <p class="hebergements-card-subtitle">Charonne</p>
-                            <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                            <h3 class="carte-title">La note enchantée</h3>
+                            <p class="carte-subtitle">Charonne</p>
+                            <div class="coeur1">
+                                <i class="fa-solid fa-heart fa-2x" aria-hidden="true"></i>
+                            </div> 
                         </div>
                     </article>
                 </a>
@@ -72,9 +87,11 @@
                     <article class="carte">
                         <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat rond">
                         <div class="carte-txt">    
-                            <h3 class="card-title">À la française</h3>
-                            <p class="hebergements-card-subtitle">Cité Rouge</p>
-                            <i class="fa-regular fa-heart" aria-hidden="true"></i>
+                            <h3 class="carte-title">À la française</h3>
+                            <p class="carte-subtitle">Cité Rouge</p>
+                            <div class="coeur1">
+                                <i class="fa-regular fa-heart fa-2x" aria-hidden="true"></i>
+                            </div> 
                         </div>
                     </article>
                 </a>
@@ -82,9 +99,11 @@
                     <article class="carte">
                         <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat rectangulaire">
                         <div class="carte-txt">    
-                            <h3 class="card-title">Le délice des sens</h3>
-                            <p class="hebergements-card-subtitle">Folie-Méricourt</p>
-                            <i class="fa-regular fa-heart" aria-hidden="true"></i>
+                            <h3 class="carte-title">Le délice des sens</h3>
+                            <p class="carte-subtitle">Folie-Méricourt</p>
+                            <div class="coeur1">
+                                <i class="fa-regular fa-heart fa-2x" aria-hidden="true"></i>
+                            </div> 
                         </div>
                     </article>
                 </a>
@@ -95,8 +114,8 @@
             <img src="assets/images/logo/ohmyfood@2x.svg" alt="logo">
             <div class="footer-container">
                 <ul class="links">
-                    <li><a href="#"><i class="fa-solid fa-utensils" aria-hidden="true"><b class="icone-txt">Proposer un restaurant</b></i></a></li>
-                    <li><a href="#"><i class="fa-solid fa-handshake-simple" aria-hidden="true"><b class="icone-txt">Devenir partenaire</b></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-utensils" aria-hidden="true"><b>Proposer un restaurant</b></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-handshake-simple" aria-hidden="true"><b>Devenir partenaire</b></i></a></li>
                     <li><a href="#"><b>Mentions légales</b></a></li>
                     <li><a href="#"><b>Contact</b></a></li>
                 </ul>
