--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 <a href="#">
                     <article class="carte">
                         <div class="image-container">
-                            <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat rond">
-                            <div class="image-txt">Nouveau</div>
+                            <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat rond" class="lapalette">
+                            <span class="image-txt">Nouveau</span>
                         </div>
                         <div class="carte-txt">    
                             <h3 class="carte-title">La palette du goût</h3>
@@ -72,8 +72,9 @@
                 <a href="#">
                     <article class="carte">
                         <div class="image-container">
-                        <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat rond">
-                        <span class="image-txt">Nouveau</span>                     
+                            <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat rond">
+                            <span class="image-txt">Nouveau</span>
+                        </div>                     
                         <div class="carte-txt">    
                             <h3 class="carte-title">La note enchantée</h3>
                             <p class="carte-subtitle">Charonne</p>
@@ -111,13 +112,13 @@
         </section>
         </main>
         <footer>
-            <div class="logo_footer">
-            <img src="assets/images/logo/ohmyfood@2x.svg" alt="logo">
-            </div>
+           
+            <p class="logo_footer">ohmyfood</p>
+            
             <div class="footer-container">
                 <ul class="links">
-                    <li><a href="#"><i class="fa-solid fa-utensils" aria-hidden="true"><b> Proposer un restaurant</b></i></a></li>
-                    <li><a href="#"><i class="fa-solid fa-handshake-simple" aria-hidden="true"><b> Devenir partenaire</b></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-utensils" aria-hidden="true"><b class="logofooter-txt"> Proposer un restaurant</b></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-handshake-simple" aria-hidden="true"><b class="logofooter-txt"> Devenir partenaire</b></i></a></li>
                     <li><a href="#"><b>Mentions légales</b></a></li>
                     <li><a href="#"><b>Contact</b></a></li>
                 </ul>
