--- a/Restaurants/restaurant2.html
+++ b/Restaurants/restaurant2.html
@@ -90,11 +90,11 @@
             </section>                                                    
         </main>
         <footer>
-            <img class="footer-logo" src="/Assets/Images/logo/ohmyfood@2x.svg" alt="logo">
+            <p class="logo_footer">ohmyfood</p>
             <div class="footer-container">
                 <ul class="links">
-                    <li><a href="#"><i class="fa-solid fa-utensils" aria-hidden="true"><b> Proposer un restaurant</b></i></a></li>
-                    <li><a href="#"><i class="fa-solid fa-handshake-simple" aria-hidden="true"><b> Devenir partenaire</b></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-utensils" aria-hidden="true"><b class="logofooter-txt"> Proposer un restaurant</b></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-handshake-simple" aria-hidden="true"><b class="logofooter-txt"> Devenir partenaire</b></i></a></li>
                     <li><a href="#"><b>Mentions légales</b></a></li>
                     <li><a href="#"><b>Contact</b></a></li>
                 </ul>
