Modifications du footer

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <a href="#">
                     <article class="carte">
                         <div class="image-container">
-                            <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat rond" class="lapalette">
+                            <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat rond">
                             <span class="image-txt">Nouveau</span>
                         </div>
                         <div class="carte-txt">    
