--- a/Restaurants/restaurant3.html
+++ b/Restaurants/restaurant3.html
@@ -18,7 +18,7 @@
             <i class="fa-solid fa-left-long"></i>
             <a href="#"><img src="/assets/images/logo/ohmyfood@2x.svg" alt="logo" title="Ohmyfood" id="logo"></a>
             </div>
-            <img src="/Assets/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat rond" class="lapalette">
+            <img src="/Assets/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat rond" class="enchantee">
         </header> 
         <main>
             <section class="lacarte">
