--- a/Restaurants/restaurant4.html
+++ b/Restaurants/restaurant4.html
@@ -89,7 +89,7 @@
                 </div>
             </section>                                                    
         </main>
-        <footer>
+        <footer class="footer_restaurants">
             <p class="logo_footer">ohmyfood</p>
             <div class="footer-container">
                 <ul class="links">
