--- a/Restaurants/restaurant1.html
+++ b/Restaurants/restaurant1.html
@@ -25,8 +25,8 @@
                 <div class="titre_lacarte_coeur">                
                     <h1 class="titre_lacarte">La palette du goût</h1>
                     <div>
-                        <i class="fa-regular fa-heart fa-2x heart-empty" aria-hidden="true"></i>
-                        <i class="fa-solid fa-heart fa-2x heart-full" aria-hidden="true"></i>
+                        <i class="fa-solid fa-heart fa-2x" aria-hidden="true"></i>
+                        <i class="fa-regular fa-heart fa-2x" aria-hidden="true"></i>
                     </div>
                 </div>                        
                 <div class="entrees">                    
