Correction icone coeur et logo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="main-container">
         <header>
-            <a href="#"><img src="/Assets/Images/logo/ohmyfood.png" alt="logo" title="Ohmyfood" id="logo"></a>
+            <a href="#"><img src="Assets/Images/logo/ohmyfood.png" alt="logo" title="Ohmyfood" id="logo"></a>
         <nav>
             <form class="search-bar">
                 <i class="fa-solid fa-location-dot" aria-hidden="true"></i>
@@ -64,7 +64,7 @@
                             <h3 class="carte-title">La palette du goût</h3>
                             <p class="carte-subtitle">Ménilmontant</p>                            
                             <div class="coeur1">
-                                <i class=" fa-regular fa-heart fa-2x" aria-hidden="true"></i>
+                                <i class=" fa-solid fa-heart " aria-hidden="true"></i>
                             </div>                           
                         </div>
                     </article>
