--- a/Restaurants/restaurant1.html
+++ b/Restaurants/restaurant1.html
@@ -24,10 +24,10 @@
             <section class="lacarte">
                 <div class="titre_lacarte_coeur">                
                     <h1 class="titre_lacarte">La palette du goût</h1>
-                    <div>
-                        <i class="fa-solid fa-heart fa-2x" aria-hidden="true"></i>
-                        <i class="fa-regular fa-heart fa-2x" aria-hidden="true"></i>
-                    </div>
+                    <button>
+                       <a href="#"><i class="fa-solid fa-heart fa-2x" aria-hidden="true"></i></a>
+                       <a href="#"><i class="fa-regular fa-heart fa-2x" aria-hidden="true"></i></a>
+                    </button>
                 </div>                        
                 <div class="entrees">                    
                     <h2 class="subtitle_lacarte">ENTRÉES</h2>
