Paramétrage du coeur

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <h3 class="carte-title">La note enchantée</h3>
                             <p class="carte-subtitle">Charonne</p>
                             <div class="coeur1">                                                      
-                                <i class="fa-solid fa-heart fa-2x" aria-hidden="true"></i>
+                                <i class="fa-solid fa-heart " aria-hidden="true"></i>
                             </div>
                         </div>
                     </article>
@@ -91,7 +91,7 @@
                             <h3 class="carte-title">À la française</h3>
                             <p class="carte-subtitle">Cité Rouge</p>
                             <div class="coeur1">
-                                <i class="fa-regular fa-heart fa-2x" aria-hidden="true"></i>
+                                <i class="fa-regular fa-heart " aria-hidden="true"></i>
                             </div> 
                         </div>
                     </article>
@@ -103,7 +103,7 @@
                             <h3 class="carte-title">Le délice des sens</h3>
                             <p class="carte-subtitle">Folie-Méricourt</p>
                             <div class="coeur1">
-                                <i class="fa-regular fa-heart fa-2x" aria-hidden="true"></i>
+                                <i class="fa-regular fa-heart " aria-hidden="true"></i>
                             </div> 
                         </div>
                     </article>
