Utilisation de fa-solid pour icones coeur

--- a/Restaurants/restaurant1.html
+++ b/Restaurants/restaurant1.html
@@ -24,10 +24,9 @@
             <section class="lacarte">
                 <div class="titre_lacarte_coeur">                
                     <h1 class="titre_lacarte">La palette du goût</h1>
-                    <button>
-                       <a href="#"><i class="fa-solid fa-heart fa-2x" aria-hidden="true"></i></a>
-                       <a href="#"><i class="fa-regular fa-heart fa-2x" aria-hidden="true"></i></a>
-                    </button>
+                    <div class="coeur1">
+                       <i class="fa-solid fa-heart" aria-hidden="true"></i>
+                    </div>
                 </div>                        
                 <div class="entrees">                    
                     <h2 class="subtitle_lacarte">ENTRÉES</h2>
