--- a/Restaurants/restaurant3.html
+++ b/Restaurants/restaurant3.html
@@ -24,8 +24,8 @@
             <section class="lacarte">
                 <div class="titre_lacarte_coeur">                
                     <h1 class="titre_lacarte">La note enchantée</h1>
-                    <div>
-                        <i class="fa-regular fa-heart fa-2x" aria-hidden="true"></i>
+                    <div class="coeur1">
+                        <i class="fa-solid fa-heart" aria-hidden="true"></i>
                     </div>
                 </div>                        
                 <div class="entrees">                    
