--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <section class="menus">
             <h2 class="section-title3">Restaurants</h2>
             <div class="cartes">
-                <a href="#">
+                <a href="restaurant1.html">
                     <article class="carte">
                         <div class="image-container">
                             <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat rond">                          
@@ -69,7 +69,7 @@
                         </div>
                     </article>
                 </a>
-                <a href="#">
+                <a href="restaurant2.html">
                     <article class="carte">
                         <div class="image-container">
                             <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat rond">
@@ -84,7 +84,7 @@
                         </div>
                     </article>
                 </a>
-                <a href="#">
+                <a href="restaurant3.html">
                     <article class="carte">
                         <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat rond">
                         <div class="carte-txt">    
@@ -96,7 +96,7 @@
                         </div>
                     </article>
                 </a>
-                <a href="#">
+                <a href="restaurant4.html">
                     <article class="carte">
                         <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat rectangulaire">
                         <div class="carte-txt">    
