Activation du bouton de recherche

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <div class="explorer">
                 <h1 class="section-title">Réservez le menu qui vous convient</h1>
                 <p class="sub-title">Découvrez des restaurants d'exception, selectionnés par nos soins.</p>
-                <button disabled="" class="searchbutton" value="rechercher">
-                    <abbr class="glass">Explorer nos restaurants</abbr>
+                <button  disabled="" class="searchbutton" value="rechercher">
+                    <a href="#restaurants"><abbr class="glass">Explorer nos restaurants</abbr></a>
                 </button>
             </div>
         <main>
@@ -52,8 +52,8 @@
             </div>
         </section>
         <section class="menus">
-            <h2 class="section-title3">Restaurants</h2>
-            <div class="cartes">
+            <h2 id="restaurants" class="section-title3">Restaurants</h2>
+            <div  class="cartes">
                 <a href="restaurant1.html">
                     <article class="carte">
                         <div class="image-container">
