Eclaircissement des boutons

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
             <div class="explorer">
                 <h1 class="section-title">Réservez le menu qui vous convient</h1>
                 <p class="sub-title">Découvrez des restaurants d'exception, selectionnés par nos soins.</p>
+                <a href="#restaurants">
                 <button  disabled="" class="searchbutton" value="rechercher">
-                    <a href="#restaurants"><abbr class="glass">Explorer nos restaurants</abbr></a>
+                    <abbr class="glass">Explorer nos restaurants</abbr></a>
                 </button>
             </div>
         <main>
