Ajout contact email

--- a/Restaurants/restaurant1.html
+++ b/Restaurants/restaurant1.html
@@ -27,7 +27,8 @@
                     <div class="coeur1">
                        <i class="fa-solid fa-heart" aria-hidden="true"></i>
                     </div>
-                </div>                        
+                </div>
+                <a href="#">                        
                 <div class="entrees">                    
                     <h2 class="subtitle_lacarte">ENTRÉES</h2>
                     <div class="menu">
@@ -82,11 +83,13 @@
                         <p class="prix">23<span class="euros">€</span></p>
                     </div>
                 </div>
-                <div class="commander">                        
+                <div class="commander">
+                    <a href="#">                       
                     <button disabled="" class="searchbutton" value="rechercher">
-                        <abbr class="glass">Commander</abbr>
+                        <abbr class="glass">Commander</abbr></a>
                     </button>
                 </div>
+                </a>
             </section>                                                    
         </main>
         <footer class="footer_restaurants">
