--- a/Restaurants/restaurant1.html
+++ b/Restaurants/restaurant1.html
@@ -96,10 +96,10 @@
             <p class="logo_footer">ohmyfood</p>
             <div class="footer-container">
                 <ul class="links">
-                    <li><a href="#"><i class="fa-solid fa-utensils" aria-hidden="true"><b class="logofooter-txt"> Proposer un restaurant</b></i></a></li>
-                    <li><a href="#"><i class="fa-solid fa-handshake-simple" aria-hidden="true"><b class="logofooter-txt"> Devenir partenaire</b></i></a></li>
-                    <li><a href="#"><b>Mentions légales</b></a></li>
-                    <li><a href="#"><b>Contact</b></a></li>
+                    <li><i class="fa-solid fa-utensils" aria-hidden="true"><b class="logofooter-txt"> Proposer un restaurant</b></i></a></li>
+                    <li><i class="fa-solid fa-handshake-simple" aria-hidden="true"><b class="logofooter-txt"> Devenir partenaire</b></i></a></li>
+                    <li><b>Mentions légales</b></a></li>
+                    <li><a href="mailto:restaurant@ohmyfood.com"><b>Contact</b></a></li>
                 </ul>
             </div>
         </footer>
