--- a/Restaurants/restaurant4.html
+++ b/Restaurants/restaurant4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu - La palette du goût</title>
+    <title>Menu - À la française</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&amp;family=Raleway&amp;family=Shrikhand&amp;display=swap&amp;_cacheOverride=1702719730117" rel="stylesheet">
@@ -93,10 +93,10 @@
             <p class="logo_footer">ohmyfood</p>
             <div class="footer-container">
                 <ul class="links">
-                    <li><a href="#"><i class="fa-solid fa-utensils" aria-hidden="true"><b class="logofooter-txt"> Proposer un restaurant</b></i></a></li>
-                    <li><a href="#"><i class="fa-solid fa-handshake-simple" aria-hidden="true"><b class="logofooter-txt"> Devenir partenaire</b></i></a></li>
-                    <li><a href="#"><b>Mentions légales</b></a></li>
-                    <li><a href="#"><b>Contact</b></a></li>
+                    <li><i class="fa-solid fa-utensils" aria-hidden="true"><b class="logofooter-txt"> Proposer un restaurant</b></i></a></li>
+                    <li><i class="fa-solid fa-handshake-simple" aria-hidden="true"><b class="logofooter-txt"> Devenir partenaire</b></i></a></li>
+                    <li><b>Mentions légales</b></a></li>
+                    <li><a href="mailto:restaurant@ohmyfood.com"><b>Contact</b></a></li>
                 </ul>
             </div>
         </footer>
