Interactivité de la partie commande des menus

--- a/Restaurants/restaurant2.html
+++ b/Restaurants/restaurant2.html
@@ -27,7 +27,8 @@
                     <div class="coeur1">
                         <i class="fa-solid fa-heart " aria-hidden="true"></i>
                     </div>
-                </div>                        
+                </div>
+                <a href="#">                        
                 <div class="entrees">                    
                     <h2 class="subtitle_lacarte">ENTRÉES</h2>
                     <div class="menu">
@@ -87,6 +88,7 @@
                         <abbr class="glass">Commander</abbr>
                     </button>
                 </div>
+                </a>
             </section>                                                    
         </main>
         <footer class="footer_restaurants">
