Suppression interactivité du logo

--- a/Restaurants/restaurant2.html
+++ b/Restaurants/restaurant2.html
@@ -16,7 +16,7 @@
         <header>
             <div class="logopages">
             <i class="fa-solid fa-left-long"></i>
-            <a href="#"><img src="/assets/images/logo/ohmyfood@2x.svg" alt="logo" title="Ohmyfood" id="logo"></a>
+            <img src="/assets/images/logo/ohmyfood@2x.svg" alt="logo" title="Ohmyfood" id="logo"></a>
             </div>
             <img src="/Assets/Images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat rond" class="lapalette">
         </header> 
