--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="main-container">
         <header>
-            <a href="#"><img src="Assets/Images/logo/ohmyfood.png" alt="logo" title="Ohmyfood" id="logo"></a>
+            <img src="Assets/Images/logo/ohmyfood.png" alt="logo" title="Ohmyfood" id="logo"></a>
         <nav>
             <form class="search-bar">
                 <i class="fa-solid fa-location-dot" aria-hidden="true"></i>
