--- a/Restaurants/restaurant2.html
+++ b/Restaurants/restaurant2.html
@@ -35,16 +35,25 @@
                         <h3 class="titre_menus">Tartare de thon</h3>
                         <p class="subtitle_menus">Assaisonné au yuzu</p>
                         <p class="prix">25<span class="euros">€</span></p>
+                        <button class="div-vert">
+                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        </button>
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Bouchée de homard croustillant</h3>
                         <p class="subtitle_menus">Et sa farandole de petits légumes</p>
                         <p class="prix">35<span class="euros">€</span></p>
+                        <button class="div-vert">
+                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        </button>
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Poulet rôti aux herbes de Provence</h3>
                         <p class="subtitle_menus">Et sa crème de truffe</p>
                         <p class="prix">40<span class="euros">€</span></p>
+                        <button class="div-vert">
+                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        </button>
                     </div>                    
                 </div>                          
                 <div class="plats">                    
@@ -53,16 +62,25 @@
                         <h3 class="titre_menus">Poulet rôti aux herbes de Provence</h3>
                         <p class="subtitle_menus">Et sa crème de truffe</p>
                         <p class="prix">40<span class="euros">€</span></p>
+                        <button class="div-vert">
+                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        </button>
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Langouste rôtie</h3>
                         <p class="subtitle_menus">Et ses légumes de saison</p>
                         <p class="prix">35<span class="euros">€</span></p>
+                        <button class="div-vert">
+                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        </button>
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Côte de bœuf Angus </h3>
                         <p class="subtitle_menus">Et sa purée de panais</p>
                         <p class="prix">44<span class="euros">€</span></p>
+                        <button class="div-vert">
+                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        </button>
                     </div>
                 </div>
                 <div class="desserts">                    
@@ -71,16 +89,25 @@
                         <h3 class="titre_menus">Farandole de desserts</h3>
                         <p class="subtitle_menus">Du chef</p>
                         <p class="prix">18<span class="euros">€</span></p>
+                        <button class="div-vert">
+                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        </button>
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Crème brulée </h3>
                         <p class="subtitle_menus">Revisitée</p>
-                        <p class="prix">22<span class="euros">€</span></p>                        
+                        <p class="prix">22<span class="euros">€</span></p>
+                        <button class="div-vert">
+                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        </button>                        
                     </div>
                     <div class="menu">
                         <h3 class="titre_menus">Tiramisu</h3>
                         <p class="subtitle_menus">À la noisette</p>
                         <p class="prix">23<span class="euros">€</span></p>
+                        <button class="div-vert">
+                            <a href="#"></a><i class="fa-solid fa-check"></i></a>
+                        </button>
                     </div>
                 </div>
                 <div class="commander">                        
