rotate fa-handshake-simple et ajustement check

--- a/Restaurants/restaurant1.html
+++ b/Restaurants/restaurant1.html
@@ -41,6 +41,8 @@
                         </button>
                         </a>
                     </div>
+                    </a>
+                    <a href="#">
                     <div class="menu">
                         <h3 class="titre_menus">Foie gras de canard mi-cuit</h3>
                         <p class="subtitle_menus">Et ses copeaux de truffe noire</p>
@@ -51,6 +53,8 @@
                         </button>
                         </a>
                     </div>
+                    </a>
+                    <a href="#">
                     <div class="menu">
                         <h3 class="titre_menus">Œuf au plat</h3>
                         <p class="subtitle_menus">Assaisonné à la truffe sur lit de caviar</p>
@@ -61,7 +65,9 @@
                         </button>
                         </a>
                     </div>                    
-                </div>                          
+                </div>
+                </a>
+                <a href="#">                       
                 <div class="plats">                    
                     <h2 class="subtitle_lacarte">PLATS</h2>
                     <div class="menu">
@@ -74,6 +80,7 @@
                         </button>
                         </a>
                     </div>
+                    <a href="#">
                     <div class="menu">
                         <h3 class="titre_menus">Parmentier de queue de bœuf</h3>
                         <p class="subtitle_menus">À la truffe noire sur sa purée de panais</p>
@@ -84,6 +91,8 @@
                         </button>
                         </a>
                     </div>
+                    </a>
+                    <a href="#">
                     <div class="menu">
                         <h3 class="titre_menus">Filet de turbot</h3>
                         <p class="subtitle_menus">Aux agrumes</p>
@@ -95,6 +104,8 @@
                         </a>
                     </div>
                 </div>
+                </a>
+                <a href="#">
                 <div class="desserts">                    
                     <h2 class="subtitle_lacarte">DESSERTS</h2>
                     <div class="menu">
@@ -107,6 +118,8 @@
                         </button>
                         </a>
                     </div>
+                    </a>
+                    <a href="#">
                     <div class="menu">
                         <h3 class="titre_menus">Macaron au chocolat d'exception</h3>
                         <p class="subtitle_menus">Et glace à la vanille de Madagascar</p>
@@ -117,6 +130,8 @@
                         </button>
                         </a>                       
                     </div>
+                    </a>
+                    <a href="#">
                     <div class="menu">
                         <h3 class="titre_menus">Mousse au chocolat </h3>
                         <p class="subtitle_menus">Au piment d'Espelette et à la truffe noire</p>
@@ -128,11 +143,13 @@
                         </a>
                     </div>
                 </div>
+                </a>
                 <div class="commander">
                     <a href="#">                       
                     <button disabled="" class="searchbutton" value="rechercher">
                         <abbr class="glass">Commander</abbr></a>
                     </button>
+
                 </div>
                 </a>
             </section>                                                    
@@ -142,7 +159,10 @@
             <div class="footer-container">
                 <ul class="links">
                     <li><i class="fa-solid fa-utensils" aria-hidden="true"><b class="logofooter-txt"> Proposer un restaurant</b></i></a></li>
-                    <li><i class="fa-solid fa-handshake-simple" aria-hidden="true"><b class="logofooter-txt"> Devenir partenaire</b></i></a></li>
+                    <li class="rotate">
+                        <i class="fa-solid fa-handshake-simple" aria-hidden="true"></i>
+                        <b class="logofooter-txt2"> Devenir partenaire</b>
+                    </li>
                     <li><b>Mentions légales</b></a></li>
                     <li><a href="mailto:restaurant@ohmyfood.com"><b>Contact</b></a></li>
                 </ul>
