--- a/Restaurants/restaurant3.html
+++ b/Restaurants/restaurant3.html
@@ -151,7 +151,10 @@
             <div class="footer-container">
                 <ul class="links">
                     <li><i class="fa-solid fa-utensils" aria-hidden="true"><b class="logofooter-txt"> Proposer un restaurant</b></i></a></li>
-                    <li><i class="fa-solid fa-handshake-simple" aria-hidden="true"><b class="logofooter-txt"> Devenir partenaire</b></i></a></li>
+                    <li class="rotate">
+                        <i class="fa-solid fa-handshake-simple" aria-hidden="true"></i>
+                        <b class="logofooter-txt2"> Devenir partenaire</b>
+                    </li>
                     <li><b>Mentions légales</b></a></li>
                     <li><a href="mailto:restaurant@ohmyfood.com"><b>Contact</b></a></li>
                 </ul>
