Activation retour page d'accueil

--- a/Restaurants/restaurant1.html
+++ b/Restaurants/restaurant1.html
@@ -15,7 +15,7 @@
     <div class="main-container">
         <header>
             <div class="logopages">
-            <i class="fa-solid fa-left-long"></i>
+            <a href="/index.html"><i class="fa-solid fa-left-long"></i></a>
             <img src="/assets/images/logo/ohmyfood@2x.svg" alt="logo" title="Ohmyfood" id="logo"></a>
             </div>
             <img class="img-restaurant"  src="/Assets/Images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat rond" class="lapalette">
